Aug 26, 2014 - chris ---------------------------------------------------
o The file structure has been completely reorganized. It is described
	in documentation/source/structure.txt.
o Splitting unittests/cursor.cpp in two files to avoid out-of-memory
	errors during compilation on weak VM's

Aug 21, 2014 - chris ---------------------------------------------------
o Fixed segfault when opening a file with HAM_ENABLE_RECOVERY (and
	without HAM_ENABLE_TRANSACTIONS)

Jul 14, 2014 - chris ---------------------------------------------------
o Added new parameter to set a file size limit - HAM_PARAM_FILE_SIZE_LIMIT

Jul 10, 2014 - chris ---------------------------------------------------
                      release of hamsterdb-2.1.8

Jul 01, 2014 - chris ---------------------------------------------------
o The database format no longer tries to be endian agnostic; the database
	is now stored in host endian format. The endian agnostic code was broken
	anyway, and I had no hardware to test it.

Jun 30, 2014 - chris ---------------------------------------------------
o Added a Python API
o PageManager state now also persists the page id with (likely) gaps
	for new blobs
o Added new API ham_cursor_get_duplicate_position
o ham_db_get_error is now deprecated
o header files no longer include winsock.h to avoid conflicts with winsock2.h
	on Windows platforms

Jun 30, 2014 - chris ---------------------------------------------------
o Both btree layouts have been completely rewritten; PAX KeyLists
	can now be used in combination with duplicate RecordLists, and variable
	length KeyLists can now be used in combination with PAX RecordLists

May 13, 2014 - chris ---------------------------------------------------
o Adding the new "hola" API - hamsterdb analytical functions for COUNT,
	SUM, AVERAGE etc. See ham/hamsterdb_ola.h for the declarations

May 06, 2014 - chris ---------------------------------------------------
o Avoiding Btree splits if keys are appended (HAM_HINT_APPEND)
